css/chata-styles.css
.autoql-vanilla-icon-blue{
    color: var(--autoql-vanilla-accent-color, #28a8e0);
}

#notification-icon{
    font-size: 26px;
    margin-top: 13px;
}

.autoql-vanilla-chat-header-container {
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 60px;
    background: var(--autoql-vanilla-accent-color);
    box-shadow: 0 0 14px 1px rgba(0, 0, 0, 0.15);
    flex-grow: 0;
    flex-shrink: 0;
    z-index: 2;
    word-wrap: break-word;
    align-items: center;
    color:white;
    position: relative;
    z-index: 100000003;
}

.autoql-vanilla-popover-container{
    z-index: 9999;
    border: 1px solid #ababab52;
    border-radius: 4px;
    box-shadow: 0px 0 8px rgba(0, 0, 0, 0.15);
    position: absolute;
    right: 5px;
    top: 50px;
    opacity: 0;
    display: block;
    visibility: hidden;
    transition: all 0.35s ease 0s;
}

.autoql-vanilla-chata-confirm-text {
    text-align: center;
    width: 100%;
}

.autoql-vanilla-clear-messages-confirm-popover {
    color: var(--autoql-vanilla-text-color-primary);
    background: var(--autoql-vanilla-background-color-secondary);
    font-family: var(--autoql-vanilla-font-family);
    font-size: 13px;
    text-align: right;
    padding: 18px !important;
    width: 266px;
}
.autoql-vanilla-chata-confirm-btn {
    margin: 7px 0px 0 2px !important;
    border-radius: 4px !important;
    cursor: pointer !important;
    outline: none !important;
    -webkit-transition: all 0.2s ease;
    transition: all 0.2s ease;
    border-width: 2px;
    display: inline-block;
    text-align: center;
    align-items: flex-start;
    cursor: default;
    box-sizing: border-box;
    margin: 0em;
    padding: 3px 6px !important;
    border-width: 2px;
    border-style: outset;
    border-image: initial;
    font-size: 14px !important;
}

.autoql-vanilla-chata-confirm-btn.no {
    color: inherit;
    border: 1px solid var(--autoql-vanilla-border-color);
    background: inherit
}

.autoql-vanilla-chata-confirm-btn.yes {
    background: var(--autoql-vanilla-accent-color) !important;
    border: 1px solid var(--autoql-vanilla-accent-color) !important;
    color: white;
}

.autoql-vanilla-chata-confirm-btn:hover{
    opacity: .7;
}
.autoql-vanilla-chata-confirm-icon {
    color: #faad14;
    display: inline-block;
}

.autoql-vanilla-chata-header-center-container {
    position: relative;
    line-height: 60px;
    font-size: 18px;
    letter-spacing: 0.05em;
    font-weight: 600;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-family: var(--autoql-vanilla-font-family);
    font-size: 18px;
    letter-spacing: 0.05em;
}

.autoql-vanilla-chat-header-container button {
    background: transparent;
    border: none;
    color: white;
    margin: 10px;
    margin-right: 0;
    font-size: 20px;
    cursor: pointer;
    outline: none !important;
}

.autoql-vanilla-chata-button{
    background: none !important;
}
.autoql-vanilla-chata-button.close-action svg {
    width: 30px;
    height: 30px;
    padding-top: 3px;
}

.autoql-vanilla-chat-header-container button svg {
    width: 22px;
    height: 22px;
    padding-right: 2px;
    padding-top: 2px;
}

.autoql-vanilla-chat-header-container .autoql-vanilla-chata-button:hover{
    opacity: .7;
}

.autoql-vanilla-chata-button.clear-all {
    margin-right: 11px;
}

.autoql-vanilla-drawer-content {
    width: calc(100%);
    height: 100%;
    flex: 1;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 0%;
    background: var(--autoql-vanilla-background-color-primary);
    padding-top: 10px;
}

.autoql-vanilla-chata-scrollbox {
  width: 100%;
  height: 100%;
  max-height: calc(100% - 150px);
  overflow: auto;
  visibility: hidden;
  scroll-behavior: smooth;
  scrollbar-width: thin;
  border-radius: 3px;
}

.autoql-vanilla-chata-scrollbox.max-height{
    max-height: 100% !important;
}

.autoql-vanilla-drawer-content, .autoql-vanilla-chata-scrollbox:hover, .autoql-vanilla-chata-scrollbox:focus {
  visibility: visible;
}

.autoql-vanilla-chat-single-message-container .autoql-vanilla-chat-message-bubble {
    position: relative;
    margin-bottom: 6px;
    padding: 13px;
    border-radius: 6px;
    max-width: calc(100% - 20px);
    word-wrap: break-word;
    font-family: var(--autoql-vanilla-font-family);
    font-size: 14px;
    letter-spacing: 0.04em;
    background: var(--autoql-vanilla-background-color-secondary);
    color: var(--autoql-vanilla-text-color-primary);
    min-width: 317px;
    max-height: 400px;
    box-shadow: var(--autoql-vanilla-box-shadow-1);
}

.autoql-vanilla-chat-message-bubble.single{
    min-width: auto;
}

.autoql-vanilla-chat-message-bubble.suggestions{
    min-width: auto;
    max-width: fit-content;
}

.autoql-vanilla-chat-message-bubble.simple-response{
    min-width: 125px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.autoql-vanilla-chat-message-bubble.no-hover-response .autoql-vanilla-chata-single-response:hover{
    text-decoration: none;
    color: var(--autoql-vanilla-text-color-primary);
    cursor: default;
    font-weight: normal;
}

.autoql-vanilla-chata-single-response{
    font-size: 20px;
}

.autoql-vanilla-chat-single-message-container .autoql-vanilla-chat-message-bubble.text {
    max-width: 85%;
}

.autoql-vanilla-chat-single-message-container {
    transition: background-color 0.2s ease;
    padding-top: 6px;
}

.autoql-vanilla-chat-single-message-container.response {
    display: flex;
    min-height: 0;
    justify-content: flex-start;
    padding-left: 20px;
    -webkit-animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
    animation: scale-up-bl 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
}

.autoql-vanilla-chat-single-message-container.text{
    max-width: 85%;
}

.autoql-vanilla-chat-single-message-container.autoql-vanilla-suggestions-container{
    display: block !important;
 }
/* ... */

